--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,7 @@
     {% endfor %}
 
     <a class="sidebar-nav-item" href="/blog">Blog</a>
-    <a class="sidebar-nav-item" href="/Yash_Mehrotra_Resume.pdf">Resume</a>
+    <a class="sidebar-nav-item" href="/resume.pdf">Resume</a>
     <a class="sidebar-nav-item" href="{{ site.github_repo }}">GitHub</a>
   </nav>
 
